--- a/style.css
+++ b/style.css
@@ -1,12 +1,262 @@
-footer{
+body {
+	background-color: #fcfcff;
+	color: gray;
+	padding-bottom: 120px;
+}
+
+#header{
+	background-color: aliceblue;
+}
+
+#header div{
+	font-size: 20pt;
+	padding: 10px 20px 0px 20px;
+	border-bottom: 3px solid #b9c6d2;
+}
+
+#header div p{
+	margin-bottom: 0px;
+}
+
+.story {
+	margin: auto;
+	margin-top: 50px;
+	margin-bottom: 20px;
+	width: 60vw;
+	border: dashed 2px #ffc3c3;
+	border-radius: 8px;
+	box-shadow: 0 0 0 10px #fff6e6;
+	padding: 20px 20px 20px 20px;
+	color: #ee8992;
+	background: #fff6e6;
+}
+
+.story-title {
+	border-radius: 8px 8px 0 0;
+	margin: -20px -20px 5px -20px;
+	font-size: 1.3em;
+	padding: 10px 0 10px 0;
+	font-weight:bold;
+	text-align: center;
+}
+
+.story p {
+	margin: 0;
+	padding: 0;
+}
+
+.story-content {
+	background-image:
+	linear-gradient(90deg, rgba(237, 119, 128, 0) 0%, rgba(237, 119, 128, 0) 50%, #fff6e6 0%, #fff6e6 100%), linear-gradient(180deg, rgba(237, 119, 128, 0) 0%, rgba(237, 119, 128, 0) 95%, #ed7780 100%);
+	background-size: 8px 100%,100% 2em;
+	line-height: 2;
+	padding: 4px 10px 22px 10px;
+}
+
+#title{
+	margin: 20px;
+	font-size: 32pt;
+}
+
+#rule{
+	margin: auto;
+	margin-top: 30px;
+	width: 60vw;
+}
+
+.key{
+	border: 1px solid #95ccff;
+	padding: 1em;
+}
+
+.in-text{
+	width: 1em;
+	height: 1em;
+}
+
+.box26 {
+	position: relative;
+	margin: 2em 0;
+	padding: 0.5em 1em;
+	border: solid 3px #95ccff;
+	border-radius: 8px;
+}
+.box26 .box-title {
 	position: absolute;
+	display: inline-block;
+	top: -13px;
+	left: 10px;
+	padding: 0 9px;
+	line-height: 1;
+	font-size: 19px;
+	background: #FFF;
+	color: #95ccff;
+	font-weight: bold;
+}
+.box26 ul {
+	margin: 10px 20px;
+	padding: 0;
+}
+
+#content{
+}
+
+#footer{
+	position: fixed;
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 120px;
-	background-color: #f5f5f5;
+	height: 100px;
+	background-color: aliceblue;
 	display: flex;
 	align-items: center;
-	padding: 0 50px;
+	padding: 0 10vw;
 }
 
+#answer{
+	color: gray;
+}
+
+#answer::placeholder{
+	color: lightgray;
+}
+
+table{
+	border-collapse: collapse;
+	color: gray;
+}
+
+.iquestion{
+	margin-right: 100px;
+	margin-top: 50px;
+}
+
+.ikouho_space{
+	margin-top: 50px;
+}
+
+.kouho_space h4{
+	margin-left: 75px;
+}
+
+table td{
+	border: solid 1pt #95ccff;
+	text-align: center;
+}
+
+.question td{
+	width: 50px;
+	height: 50px;
+}
+
+#nanpure tr:first-child{
+	border-top: solid 2pt #95ccff;
+}
+
+#nanpure tr:nth-child(3n){
+	border-bottom: solid 2pt #95ccff;
+}
+
+#nanpure td:first-child{
+	border-left: solid 2pt #95ccff;
+}
+
+#nanpure td:nth-child(3n){
+	border-right: solid 2pt #95ccff;
+}
+
+.black-box{
+	background-color: gray;
+}
+
+.clicked{
+	background-color: antiquewhite;
+}
+
+td:not(.holder):not(.kouho_masu){
+	opacity: 50%;
+}
+
+.holder{
+}
+
+.next{
+	margin-top: 50px;
+}
+
+.submit{
+	margin-top: 30px;
+}
+
+.large-btn{
+	font-weight: bold;
+	border-width: 3px;
+}
+
+.small-btn{
+	font-size: 8pt;
+	margin-top: 10px;
+	margin-left: 40px;
+	width: 120px;
+}
+
+.submit-btn{
+	color: #95ccff;
+	border-color: #95ccff;
+}
+
+.btn-outline-info:hover, .btn-outline-info:focus, 
+.btn-outline-info:active, .btn-outline-info:active:focus, .btn-outline-info:active:hover, .btn-outline-info:active.focus,
+.btn-outline-info.active, .btn-outline-info.active:focus, .btn-outline-info.active:hover, .btn-outline-info.active.focus,
+.open > .dropdown-toggle.btn-outline-info, 
+.open > .dropdown-toggle.btn-outline-info:hover,
+.open > .dropdown-toggle.btn-outline-info:focus, 
+.open > .dropdown-toggle.btn-outline-info.focus,
+.btn-outline-info.disabled:hover, .btn-outline-info[disabled]:hover, fieldset[disabled] .btn-outline-info:hover,
+.btn-outline-info.disabled:focus, .btn-outline-info[disabled]:focus, fieldset[disabled] .btn-outline-info:focus,
+.btn-outline-info.disabled.focus, .btn-outline-info[disabled].focus, fieldset[disabled] .btn-outline-info.focus {
+	background-color: #95ccff;
+	color: white;
+	border-color: #95ccff;
+}
+
+#modal{
+	top: 20%;
+	font-size: 16pt;
+	max-width: inherit;
+}
+
+.modal-dialog{
+	max-width: inherit;
+	width: 80vw;
+}
+
+#kouho td{
+	width: 50px;
+	height: 50px;
+}
+
+.kuroneko{
+	text-align: center;
+	min-height: 120vh;
+	margin-top: 20px;
+}
+
+.chapter{
+	text-align: center;
+	margin: 0;
+	padding: 0;
+	font-size: 16pt;
+	color: #95ccff;
+}
+
+.chapter li{
+	margin-left: 20px;
+	margin-right: 20px;
+	display: none;
+	list-style: none;
+}
+
+.chapter li a{
+	color: #95ccff;
+}
