fix background color

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ body {
 	padding: 0 9px;
 	line-height: 1;
 	font-size: 19px;
-	background: #FFF;
+	background: #fcfcff;
 	color: #95ccff;
 	font-weight: bold;
 }
