--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
 	background-color: #fcfcff;
 	color: gray;
 	padding-bottom: 120px;
+	font-family: "Yusei Magic", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 #header{
@@ -56,6 +59,12 @@ body {
 #title{
 	margin: 20px;
 	font-size: 32pt;
+}
+
+#book-title{
+	font-family: "Lobster Two", sans-serif;
+	font-weight: 400;
+	font-style: normal;
 }
 
 #rule{
